manifests/media/sonarr/spec-patch.yaml
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: srv
spec:
  template:
    spec:
      containers:
      - name: srv

        image: linuxserver/sonarr
        ports:
        - containerPort: 8989
          name: http
          protocol: TCP

        resources:
          requests:
            memory: 250Mi
            cpu: 25m
          limits:
            memory: 1000Mi
            cpu: 1000m

        volumeMounts:
        - name: config
          mountPath: /config
        - name: downloads
          mountPath: /downloads
        - name: library
          mountPath: /tv

      volumes:
      - name: config
        hostPath:
          path: /tank/data/sonarr
          type: Directory
      - name: downloads
        hostPath:
          path: /tank/media/tv/downloads
          type: Directory
      - name: library
        hostPath:
          path: /tank/media/tv/library
          type: Directory
