manifests/media/sonarr/statefulset.yaml
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: sonarr
spec:
  serviceName: sonarr
  volumeClaimTemplates: []
  replicas: 1
  updateStrategy:
    type: RollingUpdate

  template:
    metadata:
      annotations:
        vk.podman.io/systemd.sonarr: 'false'
        vk.podman.io/volume-selinux.config: relabel-private
    spec:

      nodeSelector:
        kubernetes.io/role: pet
        kubernetes.io/hostname: ausbox

      tolerations:
      - key: kubernetes.io/pet-node
        operator: Exists
        effect: NoSchedule

      containers:

      - name: sonarr
        image: linuxserver/sonarr

        ports:
        - containerPort: 8989
          name: http
          protocol: TCP

        volumeMounts:
        - name: config
          mountPath: /config
        - name: downloads
          mountPath: /downloads
        - name: library
          mountPath: /tv

      volumes:
      - name: config
        hostPath:
          path: /tank/data/sonarr
          type: Directory
      - name: downloads
        hostPath:
          path: /tank/media/tv/downloads
          type: Directory
      - name: library
        hostPath:
          path: /tank/media/tv/library
          type: Directory
