manifests/media/sonarr/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: sonarr
spec:
  ports:
  - protocol: TCP
    name: http
    port: 80
    targetPort: http
